# Surprise

./: MANIFEST.in  TODO.md  lint.sh  pyproject.toml  rebuild_extensions.py  setup.py  test_integration.py  test_setup.py  verify_installation.py  verify_workflows.py
.github/workflows/: benchmarks.yml  build_docs.yml  build_sdist.yml  lint.yml  test.yml
doc/source/: conf.py
examples/: baselines_conf.py  basic_usage.py  evaluate_on_trainset.py  generate_grid_search_cv_results_example.py  grid_search_usage.py  load_custom_dataset_predefined_folds.py  load_from_dataframe.py  precision_recall_at_k.py  serialize_algorithm.py  similarity_conf.py  split_data_for_unbiased_estimation.py  top_n_recommendations.py  train_test_split.py  use_cross_validation_iterators.py
examples/notebooks/: Compare.ipynb  KNNBasic_analysis.ipynb
surprise/: __init__.py  __main__.py  builtin_datasets.py  dataset.py  similarities.pyx  utils.py
surprise/model_selection/: __init__.py  search.py  split.py  validation.py
surprise/prediction_algorithms/: __init__.py  algo_base.py  co_clustering.pyx  knns.py  optimize_baselines.pyx  slope_one.pyx
tests/: conftest.py  test_NMF.py  test_algorithms.py  test_bsl_options.py  test_dataset.py  test_dump.py  test_rating_scale_in_dataset.py  test_search.py  test_similarities.py  test_split.py  test_validation.py
