[project]
name = "scikit-surprise"
authors = [{ name = "Nicolas Hug", email = "contact@nicolas-hug.com" }]
description = "An easy-to-use library for recommender systems."
requires-python = ">=3.11"
keywords = ["recommender", "recommendation system"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
license = { "file" = "LICENSE.md" }
dependencies = [
    # Lower bounds for deps are as in scikit-learn in May 2024, 1.6.dev0
    "joblib>=1.2.0",
    "numpy>=1.21.0",
    "scipy>=1.6.0",
]
dynamic = ["version", "readme"]

[project.scripts]
surprise = "surprise.__main__:main"

[project.urls]
homepage = "https://surpriselib.com"
repository = "https://github.com/NicolasHug/Surprise"

[build-system]
requires = ["setuptools>=61.0.0", "wheel", "Cython>=3.0.10", "numpy>=1.21.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
version = { attr = "surprise.__version__" }
readme = { content-type = "text/markdown", file = ["README.md"] }

[tool.setuptools.packages.find]
exclude = ["tests*", "doc*", "examples*"]

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.flake8]
max-line-length = 88
ignore = [
    "E203", # whitespace before ':'
    "E231", # missing whitespace after ':'
    "E241", # multiple spaces after ':'
    "E402", # module level import not at top of file
    "W503", # line break before binary operator
    "W504", # line break after binary operator
    "F821", # undefined name
    "E501", # line too long
]
exclude = [".git", "__pycache__", "dist", "build", "*.egg-info"]

[tool.usort]
first_party = ["surprise"]
